# enc

./: .enc.env  .enc.env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  HACKING.md  Makefile  README.md  ROADMAP.md  bench.py  bench.sh  enc  enc-python  enc-release  enc-rust-release  enc-typescript  mise.toml  multibench.sh  package-lock.json  package.json  requirements.txt  test.en  test.sh
benchmarks/: index.html  results.json
doc/: CAST.md  NOTES.md  booklet.en  booklet.md  enc.cast  icon.en  pitch.en  pitch.md
examples/: hello.c  hello.en
examples/balloons/: Cargo.toml  Makefile  README.md  main.en
examples/balloons/assets/: balloon.en
examples/balloons/src/: main.rs
examples/calc/: HACKING.md  Makefile  README.md  calc.en  calc.html
examples/context/: .enc.env  Makefile  README.md  main.en  main.py
examples/esp32/: Makefile  main.en
examples/esp32/blinkme/: blinkme.ino
examples/interlang/: Makefile  README.md  main.c  main.en  main.py
examples/meaning/: Makefile  answer.csv  answer.ods  question.en
examples/multi/: Makefile  README.md  lib.en  lib.py  main.en  main.py
examples/parasite/: Makefile  README.md  main.py  vibes.en  vibes.py
examples/rethink/: Makefile  README.md  describe.md  main.py  prompt.en  start.en
examples/web/: .enc.env  Makefile  README.md  index.en  index.html  main.en  main.js  styles.css  styles.en
res/: languages.en  languages.json  pricing.json  prompt.tmpl
scripts/: pricing.en  pricing.py
src/: enc.bootstrap.py  enc.cpp  enc.en  enc.py  enc.rs  enc.ts  main.rs
testdata/goldens/: hello.golden  tests-cpp.golden  tests-python.golden  tests-rust.golden  tests-typescript.golden  tests.golden
tests/: Makefile
tests/simple/: .enc.env  HACKING.md  Makefile  context.txt  main.en  main.py  test.sh
