[package]
name = "enc"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "enc"
path = "src/enc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "env"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.4"
dirs = "5.0.1"
rand = "0.8.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
